# block-interleaved-sparse-matrix

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake
include/bism/: block_sparse.hpp  generate_eigen_matrices.hpp  generate_micm_matrices.hpp
src/: CMakeLists.txt  generate_eigen_matrices.cpp  main.cpp
src/cuda/: bism_cuda.cpp
